samples/_failures_safe/1761175101_dd4240_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36fac16e.c: In function ‘print_sample_entries’:
./samples/SAFE/__tmp_36fac16e.c:138:12: error: missing terminating " character
  138 |     printf("\nSample log entries (first
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_36fac16e.c:138:5: error: expected expression at end of input
  138 |     printf("\nSample log entries (first
      |     ^~~~~~
./samples/SAFE/__tmp_36fac16e.c:138:5: error: expected declaration or statement at end of input
